--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".view.MainActivity" />
-        <activity android:name=".view.SplashActivity">
+        <activity android:name=".view.MainActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +45,8 @@
             android:stopWithTask="true">
         </service>
 
-        <activity android:name=".view.RouteActivity"></activity>
+        <activity android:name=".view.RouteActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
