--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -31,6 +34,7 @@
 
         <activity android:name=".view.MainActivity"
             android:screenOrientation="portrait"/>
+
         <activity android:name=".view.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -40,13 +44,21 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".services.LocationService"
-            android:stopWithTask="true">
-        </service>
-
         <activity android:name=".view.RouteActivity"
             android:screenOrientation="portrait"/>
+
+        <service
+            android:name=".services.LocationService"
+            android:stopWithTask="true"/>
+        <service android:name=".services.BackgroundDetectedActivitiesService"
+            android:stopWithTask="true"
+            android:exported="false"/>
+        <service android:name=".services.DetectedActivitiesIntentService"
+            android:stopWithTask="true"
+            android:exported="false"/>
+
+
+        <receiver android:name=".receivers.ARBroadcastReceiver" />
     </application>
 
 </manifest>
