--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,10 +32,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".view.MainActivity"
+        <activity android:name=".controller.MainActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".view.SplashActivity"
+        <activity android:name=".controller.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +44,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.RouteActivity"
+        <activity android:name=".controller.RouteActivity"
             android:screenOrientation="portrait"/>
 
         <service
