--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "com.google.android.gms:play-services-location:17.0.0"
+    implementation 'com.google.android.libraries.places:places:2.0.0'
     implementation 'com.google.maps:google-maps-services:0.2.11'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
