--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <uses-feature
@@ -34,10 +33,11 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".view.MainActivity"
-            android:screenOrientation="portrait"/>
-
-        <activity android:name=".view.SplashActivity"
+        <activity
+            android:name=".view.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,21 +45,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".view.RouteActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".view.RouteActivity"
+            android:screenOrientation="portrait" />
 
         <service
             android:name=".service.LocationService"
-            android:stopWithTask="true"/>
-        <service android:name=".service.BackgroundDetectedActivitiesService"
-            android:stopWithTask="true"
-            android:exported="false"/>
-        <service android:name=".service.DetectedActivitiesIntentService"
-            android:stopWithTask="true"
-            android:exported="false"/>
+            android:stopWithTask="true" />
+        <service
+            android:name=".service.BackgroundDetectedActivitiesService"
+            android:exported="false"
+            android:stopWithTask="true" />
+        <service
+            android:name=".service.DetectedActivitiesIntentService"
+            android:exported="false"
+            android:stopWithTask="true" />
 
         <receiver android:name=".receiver.ARBroadcastReceiver" />
+
+        <activity android:name=".view.StatisticsActivity"></activity>
     </application>
 
 </manifest>
